Fixed overlapping

--- a/style.css
+++ b/style.css
@@ -10,6 +10,5 @@ body {
 
 .menu {
   font-family: "Merriweather", serif;
-  position: fixed;
   background-color: #0009;
 }
